--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Thomas",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --port 80",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
