--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "bootstrap-vue": "^2.0.0",
-    "bootstrap": "^4.1.3",
-    "@nuxtjs/axios": "^5.3.6"
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/moment": "^1.6.0",
+    "bootstrap-vue": "^2.13.0",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {}
 }
