--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/moment": "^1.6.0",
     "bootstrap-vue": "^2.13.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-fontawesome": "^0.4.0",
+    "vue-country-flag": "^2.0.1"
   },
   "devDependencies": {}
 }
