--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/moment": "^1.6.0",
+    "alasql": "^0.6.1",
     "bootstrap-vue": "^2.13.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
