--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "exif-js": "^2.3.0",
     "nuxt": "^2.14.5",
     "nuxt-fontawesome": "^0.4.0",
-    "vue-country-flag": "^2.0.1"
+    "vue-country-flag": "^2.0.1",
+    "vue-glide-js": "^1.3.14"
   },
   "devDependencies": {}
 }
