--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/moment": "^1.6.1",
     "alasql": "^0.6.3",
     "exif-js": "^2.3.0",
     "nuxt": "^2.14.5",
     "nuxt-fontawesome": "^0.4.0",
-    "vue-country-flag": "^2.0.1"
+    "vue-country-flag": "^2.0.1",
+    "vue2-datepicker": "^3.8.2"
   },
   "devDependencies": {}
 }
