--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exif-js": "^2.3.0",
     "nuxt": "^2.14.5",
     "nuxt-fontawesome": "^0.4.0",
+    "nuxt-lazy-load": "^1.2.4",
     "vue-country-flag": "^2.0.1",
     "vue2-datepicker": "^3.8.2"
   },
